<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:visibility="visible"
        tools:context=".EditActivity">

        <TextView
            android:id="@+id/headerTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_25dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:text="@string/update_your_profile"
            android:textColor="@color/cyan_blue"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/usernameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:text="@string/usernameTV"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/dimen_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerTV" />

        <EditText
            android:id="@+id/usernameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:background="@drawable/rounded_border_edittext"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingLeft="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_15dp"
            android:paddingBottom="@dimen/dimen_15dp"
            android:tag="Username"
            android:textColor="@color/approx_gray"
            android:textColorHint="@color/approx_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameTV" />

        <TextView
            android:id="@+id/emailTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:text="@string/emailTV"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/dimen_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameET" />


        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:layout_marginBottom="@dimen/dimen_15dp"
            android:background="@drawable/rounded_border_edittext"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_15dp"
            android:paddingBottom="@dimen/dimen_15dp"
            android:tag="Email"
            android:textColor="@color/approx_gray"
            android:textColorHint="@color/approx_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTV" />

        <TextView
            android:id="@+id/phoneNumberTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:text="@string/phone_numberTV"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/dimen_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailET" />

        <EditText
            android:id="@+id/phoneNumberET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:background="@drawable/rounded_border_edittext"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="10"
            android:paddingLeft="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_15dp"
            android:paddingBottom="@dimen/dimen_15dp"
            android:tag="Phone Number"
            android:textColor="@color/approx_gray"
            android:textColorHint="@color/approx_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberTV" />

        <TextView
            android:id="@+id/pincodeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:text="@string/pincodeTV"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/dimen_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberET" />

        <EditText
            android:id="@+id/pincodeET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:background="@drawable/rounded_border_edittext"
            android:hint="@string/pincode"
            android:inputType="number"
            android:maxLength="6"
            android:paddingLeft="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_15dp"
            android:paddingBottom="@dimen/dimen_15dp"
            android:tag="Pincode"
            android:textColor="@color/approx_gray"
            android:textColorHint="@color/approx_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pincodeTV" />

        <TextView
            android:id="@+id/addressTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:text="@string/addressTV"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/dimen_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pincodeET" />

        <EditText
            android:id="@+id/addressET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:background="@drawable/rounded_border_edittext"
            android:hint="@string/address"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:paddingLeft="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_15dp"
            android:paddingBottom="@dimen/dimen_80dp"
            android:scrollbars="vertical"
            android:tag="Address"
            android:textColor="@color/approx_gray"
            android:textColorHint="@color/approx_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressTV" />

        <Button
            android:id="@+id/validateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:backgroundTint="@color/cyan_blue"
            android:padding="@dimen/dimen_10dp"
            android:text="@string/validate"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressET" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:backgroundTint="@color/cyan_blue"
            android:padding="@dimen/dimen_10dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressET" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:backgroundTint="@color/cyan_blue"
            android:padding="@dimen/dimen_10dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmButton" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/editTextEnable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="usernameET,emailET,phoneNumberET,pincodeET,addressET" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/buttonsVisibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="confirmButton,cancelButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>